<resources>
    <string name="app_name">StudentBeansTest</string>
    <string name="image_Description">image from json</string>
    <string name="result_error">Results unable to load</string>
    <string name="retry">Retry</string>
    <string name="welcome_message">Welcome back</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="Log_in">Log in</string>
    <string name="login_instructions">Log in to your Student Beans account</string>
    <string name="logout">logout</string>
</resources>