<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>

        <variable
            name="viewModel"
            type="com.example.studentbeanstest.ui.login.LoginViewModel" />

        <variable
            name="handler"
            type="com.example.studentbeanstest.util.LogInHandler" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="0dp"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.login.LoginFragment">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">
    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"

        android:text="@string/welcome_message"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/login_instructions"
        android:textColor="@color/black"
        android:textSize="15sp" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@drawable/hint_selector"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text__selector_cyan"
            android:hint="@string/email_hint"
            android:maxLines="1"
            android:text="@={viewModel.emailAddress}"


            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text__selector_cyan"
            android:hint="@string/password_hint"
            android:maxLines="1"
            android:text="@={viewModel.password}" />

    </com.google.android.material.textfield.TextInputLayout>


    <android.widget.Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@drawable/round_button"
        android:onClick="@{()->handler.onLogInClicked()}"
        android:text="@string/Log_in"
        android:textAllCaps="false"
        android:textColor="@color/white" />

        </LinearLayout>

        </ScrollView>

</LinearLayout>


    </layout>

